--- a/apps/tps/src/styles/TPSmain.css
+++ b/apps/tps/src/styles/TPSmain.css
@@ -7,11 +7,21 @@
     left: var(--pos-tps-left);
     top: var(--pos-tps-top);
     grid-template-columns: 80px 1fr 1fr 100px 120px;
-    grid-template-rows: 3rem 2rem 30px 25px 25px 25px 64px 64px 64px 130px 64px;
-    grid-template-areas: "head head head head head""sys sys we out out""sys sys we out out""hp hp hp out out""hp hp hp out out""hp hp hp out out""btnr btnr btnr btns btns"". . img img ."". . img img sizeh "". . img img ."". . sizew  sizew . ";
+    grid-template-rows: 3rem 2rem 30px 25px 25px 25px 64px 64px 64px 130px 75px;
+    grid-template-areas: "head head head head head"
+        "sys sys we out out"
+        "sys sys we out out"
+        "hp hp hp out out"
+        "hp hp hp out out"
+        "hp hp hp out out"
+        "btnr btnr btnr btns btns"
+        ". . img img ."
+        ". . img img sizeh "
+        ". . img img ."
+        ". . sizew  sizew . ";
     grid-gap: 5px 10px;
     border-radius: 15px;
-    border: 1px solid #000;
+    border: 2px ridge #000;
 }
 
 .tps_head {
