--- a/apps/zcalc/lib/btn-tgl.css
+++ b/apps/zcalc/lib/btn-tgl.css
@@ -6,7 +6,7 @@
     background-color: steelblue;
     border: 2px outset coral;
     left: 1030px;
-    top: -37px;
+    /* top: -37px; */
     border: 1px solid black;
 }
 
