--- a/apps/zcalc/lib/outblock.css
+++ b/apps/zcalc/lib/outblock.css
@@ -19,7 +19,7 @@
     justify-content: center;
     align-content: center;
     border-radius: 15px;
-    /* gap: 5px 0; */
+    gap: 5px;
     margin-bottom: 5px;
 
 }
@@ -30,10 +30,10 @@
 
 .outblock_head {
     grid-area: head;
-    width: 200px;
+    width: 100%;
     display: flex;
-    font-size: 24px;
-    font-weight: bold;
+    font-size: 20px;
+    font-weight: 400;
     justify-content: space-evenly;
     align-content: stretch;
     flex-direction: row;
@@ -42,41 +42,44 @@
 }
 
 .outblock_body {
-    width: 200px;
+    width: 220px;
     display: flex;
     grid-area: body;
     flex-direction: column;
     flex-wrap: nowrap;
     align-content: center;
     align-items: center;
+    margin: 8px;
 }
 
 .outblock_body>.out_color {
-    width: 200px;
+       width: 100%;
     display: flex;
     overflow-x: visible;
     word-wrap: none;
-    margin-bottom: 5px;
+    /* margin-bottom: 5px; */
     margin-top: 5px;
-    font-weight: bolder;
+    /* font-weight: bolder; */
     justify-content: space-between;
-    align-content: center;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    align-items: center;
-    flex-wrap: wrap;
     border-top: 1px solid #000;
-    border-bottom: 1px solid #000;
+    /* border-bottom: 1px solid #000; */
+    margin-top: 5px;
+    padding-top: 5px;
+    flex-wrap: wrap;
+    flex-direction: row;
+    font-size: 16px;
 }
 
 .outblock_body .out_sizes {
-    width: 200px;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-content: center;
     flex-direction: row;
     flex-wrap: nowrap;
     align-items: center;
+    margin-bottom: 3px;
+    gap: 5px;
 
 }
 
@@ -106,8 +109,14 @@
     background: #09b14a;
 }
 
-.out_sizes span:last-child {
-    background-color: rgba(255, 127, 80, 0.623);
+.out_sizes span {
+    /* background-color: rgba(255, 127, 80, 0.623); */
+    display: inline-block;
     border-radius: 3px;
     padding: 1px 5px;
+    border: 1px solid #000;
+    font-size: 1.2em;
+    /* font-weight: 500; */
+    width: fit-content;
+    
 }
