--- a/apps/zcalc/lib/style.css
+++ b/apps/zcalc/lib/style.css
@@ -449,7 +449,7 @@ div#outside>span:-moz-first-node {
 }
 
 .disc {
-    display: flex;
+    display: none;
     left: 1020px;
     top: 10px;
     font-size: 2em;
